          non-default plugin names
        - a few improvements to help given by "dzil help COMMAND"
        - fixes a situation where exclusion-regexp-building in GatherDir
          could mangle the given regexps
        - now properly merging distmeta fragments together without loss, using
          new CPAN::Meta::Merge (Karen Etheridge)

5.020     2014-07-28 20:56:25-04:00 America/New_York
        - the default required version for ExtUtils::MakeMaker in [MakeMaker]
          has been removed
        - load DateTime lazily
        - the default required version for Module::Build in [ModuleBuild] has
          been lowered

5.019     2014-05-20 21:11:47-04:00 America/New_York
        - remove a very brief-lived attempt to double-decode

5.018     2014-05-20 21:07:04-04:00 America/New_York
        - attempt to return abstract-from-file as a string, rather than
          bytes, which can lead to weirdness (github issue #303)

5.017     2014-05-17 08:35:33-04:00 America/New_York
        - dotfiles and dot-directories are now included in sharedirs
        - ModuleBuild and MakeMake should not re-build if it isn't needed
        - authordeps now better understands "perl" dep
        - munging of README is delayed to prevent unneeded work and
          complication
        - MANIFEST is now treated as a binary file
        - 'dzil setup' now warns that credentials are stored in the clear
        - MakeMaker should include fewer empty and useless hashrefs
        - Makefile.old is now pruned as cruft

5.016     2014-05-05 22:27:06-04:00 America/New_York
        - hint about [Encoding] plugin in encoding error message (David
          Golden)

5.015     2014-03-30 21:55:36-04:00 America/New_York
        - make it easier to have multiple PAUSE configs using UploadToCPAN's
          pause_cfg_dir option (thanks, David Golden)

5.014     2014-03-16 16:47:07+01:00 Europe/Paris
        - Added 'jobs' argument for 'dzil test' for parallel testing (thanks,