@@ -32,6 +32,14 @@ package DZT::WInComment;
 1;
 ';
 
+my $in_comment_in_sub = '
+package DZT::WInCommentInSub;
+sub foo {
+    # our $VERSION = 1.234;
+}
+1;
+';
+
 my $in_pod_stm = '
 package DZT::WInPODStm;
 
@@ -118,6 +126,7 @@ my $tzil = Builder->from_config(
       'source/lib/DZT/WVerTwoLines.pm' => $with_version_two_lines,
       'source/lib/DZT/WStrEscaped.pm'  => $in_a_string_escaped,
       'source/lib/DZT/WInComment.pm' => $in_comment,
+      'source/lib/DZT/WInCommentInSub.pm' => $in_comment_in_sub,
       'source/lib/DZT/WInPODStm.pm' => $in_pod_stm,
       'source/lib/DZT/R1.pm'     => $repeated_packages,
       'source/lib/DZT/Monkey.pm' => $monkey_patched,
@@ -173,6 +182,13 @@ like(
   $dzt_wver_in_comment,
   qr{^\s*\$\QDZT::WInComment::VERSION = '0.001';\E\s*$}m,
   "added to DZT::WInComment; the one we have is in a comment",
+);
+
+my $dzt_wver_in_comment_in_sub = $tzil->slurp_file('build/lib/DZT/WInCommentInSub.pm');
+like(
+  $dzt_wver_in_comment_in_sub,
+  qr{^\s*\$\QDZT::WInCommentInSub::VERSION = '0.001';\E\s*$}m,
+  "added to DZT::WInCommentInSub; the one we have is in a comment",
 );
 
 my $dzt_wver_in_pod_stm = $tzil->slurp_file('build/lib/DZT/WInPODStm.pm');
